@@ -1,5 +1,5 @@
 plugins {
-    id "io.micronaut.build.internal.common"
+    id 'java-library'
     id 'org.graalvm.buildtools.native'
 }
 
@@ -8,48 +8,24 @@ repositories {
 }
 
 dependencies {
-    api(mn.micronaut.http)
-
     testAnnotationProcessor(mn.micronaut.inject.java)
-    testImplementation(projects.micronautSession)
-    testImplementation(mn.reactor)
-    testImplementation(mn.micronaut.graal)
-    testImplementation(mn.micronaut.http.client)
-    testImplementation(mn.micronaut.http.server)
-    testImplementation(mn.micronaut.http.server.netty)
-    testImplementation(mnTest.micronaut.test.junit5)
-    testRuntimeOnly(mnSerde.micronaut.serde.jackson)
-}
 
-configurations {
-    all {
-        exclude group: 'org.codehaus.groovy'
-    }
-    nativeImageTestClasspath {
-        exclude module: 'groovy-test'
-    }
+    testImplementation(projects.micronautSession)
+
+    testImplementation(mn.micronaut.http)
+    testImplementation(mn.micronaut.http.client)
+    testImplementation(mn.micronaut.http.server.netty)
+
+    testImplementation(mnTest.micronaut.test.junit5)
+
+    testRuntimeOnly(mnSerde.micronaut.serde.jackson)
 }
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
 
-def openGraalModules = [
-        "org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk",
-        "org.graalvm.nativeimage.builder/com.oracle.svm.core.configure",
-        "org.graalvm.sdk/org.graalvm.nativeimage.impl"
-]
-
 graalvmNative {
-    toolchainDetection = false
-    binaries {
-        all {
-            buildArgs.add("-H:-UseServiceLoaderFeature")
-            openGraalModules.each { module ->
-                jvmArgs.add("--add-exports=" + module + "=ALL-UNNAMED")
-            }
-        }
-    }
     metadataRepository {
         enabled = true
     }
